# composer-rs

./: .gitignore  Cargo.toml
src/: autoload.rs  classmap.rs  lock.rs  main.rs
templates/: autoload.html  autoload_real.html  autoload_static.html
