[package]
name = "composer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
clap = { version = "4.4.18", features = ["derive"] }
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["stream"] }
futures = "0.3.30"
anyhow = "1.0.79"
dirs = "5.0.1"
zip-extract = "0.1.2"
async_zip = { version = "0.0.16", features = ["full"] }
sanitize-filename = "0.5.0"
tokio-util = "0.7.10"
futures-lite = "2.2.0"
askama = "0.12.1"
xxhash-rust = { version = "0.8.8", features = ["xxh3"]}
walkdir = "2.4.0"
php-parser-rs = "0.1.3"
async-walkdir = "1.0.0"
